[package]
name = "pi_adler32"
version = "0.1.0"
authors = ["moyy <moyy@gmail.com>"]
edition = "2021"
description = "adler32 crc check algorithm."
repository = "https://github.com/GaiaWorld/pi_adler32"
license = "MIT OR Apache-2.0"
keywords = ["pi", "check", "adler"]

[dependencies]
adler32="*"